--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
         }
 
         location /home {
-            alias /home/ec2-user/html;
+            alias /home/ec2-user/html/home;
             index index.html;
         }
 
