redirect not found page

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,23 +10,27 @@ http {
         listen 80;
         server_name _;
 
+        location /404.html {
+            root /home/ec2-user/NGINX/products/errors;
+        }
+
         location / {
-            root /home/ec2-user/html;
+            root /home/ec2-user/NGINX;
             index index.html;
         }
 
         location /products {
-            root /home/ec2-user/html;
-            index index.html;
+            root /home/ec2-user/NGINX;
+            try_files index.html /404.html;
         }
 
         location /home {
-            alias /home/ec2-user/html/home;
+            alias /home/ec2-user/NGINX/home;
             index index.html;
         }
 
         location ~* \.jpg$ {
-            
+            root /home/ec2-user/NGINX/images;
         }
      }
  }
