load balancer and register certs

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,10 @@ http {
 
         location /products {
             root /home/ec2-user/NGINX;
-            try_files index.html /404.html;
+        }
+
+        location /old-products {
+            return 301 /products;
         }
 
         location /home {
